Agregar Controllers, DTOs y obtener settings de ApiTest

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiTest": {
+    "ApiUrl": "https://dummyapi.io/data/v1/user?limit=30",
+    "ApiId": ""
+  },
   "AllowedHosts": "*"
 }
